# datalog-rust

./: Cargo.toml  example.datalog
.github/workflows/: rust.yml
src/: lib.rs  parsing.rs  rule.rs
tests/: dependency_tests.rs
