[package]
name = "datalog"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = { version = "7.1.3", optional = true, default-features = false, features = [
    'alloc',
] }
hashbrown = "0.15.1"

[dev-dependencies]
nom = { version = "7.1.3", default-features = false, features = ['alloc'] }

[features]
default = []
parsing = ["dep:nom"]
